<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.german.librorecetas.NuevaReceta"
    android:orientation="horizontal"
    android:weightSum="1"
    android:background="@color/Azul"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:text="@string/tVNombreNR"
        android:textColor="@color/Blanco"
        android:id="@+id/tVNombreNR"
        android:fontFamily="font/ARBERKLEY.ttf"
        android:textSize="15sp"
        android:layout_row="0"
        android:layout_column="0" />

    <EditText
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:id="@+id/eTNombre"
        android:inputType="none"
        android:textColor="@color/Blanco"
        android:text="@string/eTNombre"
        android:layout_row="0"
        android:layout_column="1" />

    <TextView
        android:layout_width="102dp"
        android:layout_height="34dp"
        android:text="@string/tVIngrediente"
        android:id="@+id/tVIngrediente"
        android:layout_row="1"
        android:layout_column="0"
        android:textColor="@color/Blanco"
        android:fontFamily="font/ARBERKLEY.ttf"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:id="@+id/eTIngrediente"
        android:layout_row="1"
        android:layout_column="1"
        android:textColor="@color/Blanco"
        android:text="@string/eTIngrediente"
        android:inputType="none" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tVPreparacion"
        android:id="@+id/tVPreparacion"
        android:layout_row="2"
        android:textSize="15sp"
        android:textColor="@color/Blanco"
        android:layout_column="0" />

    <EditText
        android:layout_width="256dp"
        android:layout_height="149dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:textSize="15sp"
        android:id="@+id/eTPreparacion"
        android:layout_row="3"
        android:layout_column="1"
        android:textColor="@color/Blanco"
        android:text="@string/eTPreparacion"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tVFoto"
        android:id="@+id/tVFoto"
        android:textColor="@color/Blanco"
        android:textSize="15sp"
        android:layout_row="4"
        android:layout_column="0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:id="@+id/iVFoto"
        android:layout_row="5"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bFoto"
        android:id="@+id/bFoto"
        android:layout_row="7"
        android:layout_column="1"
        android:clickable="true"
        android:background="@color/Azul"
        android:onClick="makePicture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tVTipoComida"
        android:id="@+id/tVTipoComida"
        android:textColor="@color/Blanco"
        android:textSize="15sp"
        android:layout_row="8"
        android:layout_column="0" />

    <EditText
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:id="@+id/eTTipoComida"
        android:textColor="@color/Blanco"
        android:textSize="15sp"
        android:layout_row="8"
        android:layout_column="1"
        android:text="@string/eTTipoComida"
        android:inputType="none" />
</GridLayout>
