<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.german.librorecetas.ConsultarReceta"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/Azul">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tVNombreR"
                android:shape="rectangle"
                android:textColor="@color/Blanco"
                android:background="@drawable/rounded_edittext"
                android:id="@+id/tVNombreR"
                android:fontFamily="font/ARBERKLEY.ttf"
                android:textSize="17sp"
                android:singleLine="false"/>

            <View style="@style/Separator"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/eTNombreR"
                android:inputType="none"
                android:textColor="@color/Blanco"
                android:text="@string/eTNombreR"
                android:ellipsize="start"
                android:textSize="17sp"
                android:capitalize="sentences"
                android:background="@drawable/appwidget_inner_focused_l"/>

            <View style="@style/Separator"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tVIngredienteR"
                android:id="@+id/tVIngredienteR"
                android:textColor="@color/Blanco"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="font/ARBERKLEY.ttf"
                android:textSize="17sp"/>

            <View style="@style/Separator"/>

            <View style="@style/Separator"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/listaIngredientesR"
                android:textSize="17sp"
                android:padding="5dp"/>

            <View style="@style/Separator"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tVPreparacionR"
                android:id="@+id/tVPreparacionR"
                android:textSize="17sp"
                android:textColor="@color/Blanco"
                android:background="@drawable/rounded_edittext"/>

            <View style="@style/Separator"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/appwidget_inner_focused_l"
                android:padding="5dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:textSize="17sp"
                android:id="@+id/eTPreparacionR"
                android:textColor="@color/Blanco"
                android:text="@string/eTPreparacionR"
                android:singleLine="false"
                android:gravity="left|top"
                android:ellipsize="start"
                android:capitalize="sentences"
                android:textAlignment="gravity"/>

            <View style="@style/Separator"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tVFotoR"
                android:id="@+id/tVFotoR"
                android:textColor="@color/Blanco"
                android:background="@drawable/rounded_edittext"
                android:textSize="17sp"/>

            <View style="@style/Separator"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:id="@+id/iVFotoR"/>

            <View style="@style/Separator"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/bFotoR"
                android:id="@+id/bFotoR"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/abc_btn_borderless_material"
                android:onClick="makePicture"
                android:textSize="17sp"/>

            <View style="@style/Separator"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tVTipoComidaR"
                android:id="@+id/tVTipoComidaR"
                android:textColor="@color/Blanco"
                android:background="@drawable/rounded_edittext"
                android:textSize="17sp"
                android:capitalize="sentences"/>

            <View style="@style/Separator"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/eTTipoComidaR"
                android:textColor="@color/Blanco"
                android:textSize="17sp"
                android:text="@string/eTTipoComidaR"
                android:inputType="none"
                android:ellipsize="start"
                android:capitalize="sentences"
                android:background="@drawable/appwidget_inner_focused_l"/>

            <View style="@style/Separator"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
